[package]
name = "keyb_mouse_rp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kmrp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
colored = "2.1.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
ratatui = "0.30.2"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5.3"
core-graphics = "0.24"

